--- a/conteudo/02_composicao_e_funcao_dos_produtos.html
+++ b/conteudo/02_composicao_e_funcao_dos_produtos.html
@@ -279,6 +279,7 @@
               </figcaption>
             </figure>
             <div class=" only-print">
+              <p>Acompanhe como as curvaturas são distribuídas em uma LC: </p>
               <ul>
                 <li>Curva base ou curva central</li>
               </ul>
@@ -297,6 +298,7 @@
                 de
                 facilitar a troca do filme lacrimal ao piscar, minimizando o atrito entre a lente e a córnea.</p>
             </div>
+            <p class="no-print">Clique e acompanhe como as curvaturas são distribuídas em uma LC: </p>
             <figure class="painel-curvas no-print">
               <button type="button" class="btn-curvas btn-curva1" data-toggle="popover" data-trigger="focus"
                 data-placement="top" data-content="É a curvatura da porção central da superfície posterior (interna) da LC.
@@ -317,12 +319,12 @@
               </button>
               <img src="../conteudo/images/02/painel/painel.png"
                 class="center-block img-responsive print borda hidden-xs hidden-sm" style="max-width: 100%;" alt="">
-              <figcaption>Estrutura de uma lente de contato <br>
+              <figcaption class="hidden-xs hidden-sm">Estrutura de uma lente de contato <br>
                 Fonte: Instituto de Oftalmologia de Assis (s. d.)
               </figcaption>
             </figure>
             <figure>
-              <img src="../conteudo/images/03/img04.png" class="center-block img-responsive print borda"
+              <img src="../conteudo/images/02/img04.png" class="center-block img-responsive"
                 alt="Figura mostrando olho de frente com LC hidrofílica (gelatinosa) aderida à córnea, com apoio da curva periférica na esclera.">
               <figcaption>Lente de contato hidrofílica <br>
                 Fonte: Marin (2022)
@@ -414,7 +416,7 @@
               específicos desenvolvidos para as correções de ametropias existentes: </p>
             <div class="no-print" aria-hidden="true">
               <p>Clique ou toque para visualizar o conteúdo.</p>
-              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+              <div class="panel-group gaitinha1" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
                   <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
