--- a/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
@@ -302,8 +302,7 @@
               <div class="container-fluid game-body no-print" style="padding:0;">
                 <div class="row">
                   <div class="col-10 align-self-start d-block m-auto">
-                    <div class="row game-descricao-img"><img src="./images/05/pg2-praticar2-ico.png"
-                        style="width: 150px;" alt=""></div>
+                    <div class="row game-descricao-img"><img src="./images/desafio.png" alt=""></div>
                     <div class="row game-descricao">
                       <p>Teste seus conhecimentos sobre as técnicas de adaptação de LCs para candidatos presbitas: </p>
                     </div>
@@ -921,8 +920,7 @@
               <div class="container-fluid game-body no-print" style="padding:0;">
                 <div class="row">
                   <div class="col-10 align-self-start d-block m-auto">
-                    <div class="row game-descricao-img"><img src="./images/05/pg2-praticar2-ico.png"
-                        style="width: 150px;" alt=""></div>
+                    <div class="row game-descricao-img"><img src="./images/desafio.png" alt=""></div>
                     <div class="row game-descricao">
                       <p>Teste seus conhecimentos sobre as técnicas de adaptação de LCs para candidatos portadores de
                         ceratocone:</p>
@@ -1225,8 +1223,7 @@
               <div class="container-fluid game-body no-print" style="padding:0;">
                 <div class="row">
                   <div class="col-10 align-self-start d-block m-auto">
-                    <div class="row game-descricao-img"><img src="./images/05/pg2-praticar2-ico.png"
-                        style="width: 150px;" alt=""></div>
+                    <div class="row game-descricao-img"><img src="./images/desafio.png" alt=""></div>
                     <div class="row game-descricao">
                       <p>Teste seus conhecimentos sobre as técnicas de adaptação de LCs em pacientes pós-cirúrgicos:</p>
                     </div>
