--- a/conteudo/06_descarte_de_residuos.html
+++ b/conteudo/06_descarte_de_residuos.html
@@ -77,7 +77,7 @@
     <!-- - - - - - - - - - - - - - - - não alterar acima - - - - - - - - - - - - -->
     <section class="paginas">
       <!-- - - - - - - - cada página é independente  - - - - - - - - - - -->
-      <div class="pagina" id="topo">
+      <div class="pagina" id="topoini">
         <h2>Descarte de resíduos do processo de adaptação de lentes de contato: tipos de resíduos gerados; impactos
           ambientais causados por descarte incorreto de resíduos; sustentabilidade</h2>
         <div class="no-print" aria-hidden="true">
@@ -480,8 +480,7 @@
                     <div class="container-fluid game-body no-print" style="padding:0;">
                       <div class="row">
                         <div class="col-10 align-self-start d-block m-auto">
-                          <div class="row game-descricao-img"><img src="./images/05/pg2-praticar2-ico.png"
-                              style="width: 150px;" alt=""></div>
+                          <div class="row game-descricao-img"><img src="./images/desafio.png" alt=""></div>
                           <div class="row game-descricao">
                             <p>Classificação dos riscos associados à biossegurança</p>
                           </div>
@@ -642,6 +641,11 @@
                   <p>Quanto ao ambiente de trabalho, é preciso prezar pela redução de bactérias e micro-organismos em
                     materiais
                     e equipamento utilizados, garantindo a biossegurança do ambiente. </p>
+                  <p class="no-print">Clique ou toque para conhecer as práticas de higienização existentes: </p>
+                  <figure>
+                    <img src="../conteudo/images/06/praticas.png"
+                      class="center-block img-responsive hidden-md hidden-lg no-print" alt="">
+                  </figure>
                   <figure class="painel-higienizacao no-print">
                     <button type="button" class="bt-higienizacao bt-higienizacao1" data-toggle="popover"
                       data-trigger="focus" data-placement="top"
@@ -660,7 +664,12 @@
                       data-content="Sanitização: Sanitização é o processo de redução de bactérias e micro-organismos até um nível considerado seguro pelos órgãos de saúde pública, garantindo a biossegurança do ambiente sanitizado.">
                     </button>
                   </figure>
-                  <p>Por meio das medidas de higienização, evita-se a <b>contaminação cruzada</b>, que consiste na
+                  <figure>
+                    <img src="../conteudo/images/06/painel_meio.png"
+                      class="center-block img-responsive hidden-sm hidden-xs no-print" alt="">
+                  </figure>
+                  <p class="espaco">Por meio das medidas de higienização, evita-se a <b>contaminação cruzada</b>, que
+                    consiste na
                     transferência
                     de micro-organismos de uma pessoa, uma superfície ou um objeto para outra pessoa, resultando na
                     transmissão
@@ -990,7 +999,7 @@
             frascos de plástico, nos quais a LC é armazenada a seco. Elas devem ser desinfetadas a cada experimentação
             para serem acondicionadas novamente da mesma forma como chegam da fábrica.</p>
           <figure>
-            <img src="../conteudo/images/06/img04.png" class="center-block img-responsive print borda"
+            <img src="../conteudo/images/06/img04print.png" class="center-block img-responsive print borda"
               alt="Imagem mostra caixa de provas de LC RGP, onde estão acondicionadas em compartimento com divisórias em estojos de plástico, com uma das unidades aberta, mostrando a LC RGP acondicionada a seco.">
             <figcaption>Caixa de provas de LC RGP<br>
               Fonte: Senac EAD (2024)
@@ -1171,21 +1180,27 @@
             e equipamento utilizados, garantindo a biossegurança do ambiente. </p>
           <ol>
             <li>Limpeza</li>
-            <p>É a remoção da sujeira de superfícies. Se utilizar um produto químico no processo convencional de
-              limpeza,
-              com esfregação e enxágue, há uma redução de até 60% de microbiologia. Porém, somente a limpeza não é o
-              suficiente para eliminar vírus e bactérias.</p>
-            <li>Desinfecção</li>
-            <p>É o processo que consiste no uso e na aplicação de desinfetante, produto que busca eliminar das
-              superfícies
-              99,999% de germes, bactérias e vírus, reduzindo-os a níveis não patogênicos.</p>
-            <li>Esterilização</li>
-            <p>Técnica que significa efetuar a eliminação total de germes, inclusive seus esporos, por meio de processos
-              físicos ou químicos bastante agressivos e restritos.</p>
-            <li>Sanitização</li>
-            <p>Sanitização é o processo de redução de bactérias e micro-organismos até um nível considerado seguro pelos
-              órgãos de saúde pública, garantindo a biossegurança do ambiente sanitizado.</p>
           </ol>
+          <p>É a remoção da sujeira de superfícies. Se utilizar um produto químico no processo convencional de
+            limpeza,
+            com esfregação e enxágue, há uma redução de até 60% de microbiologia. Porém, somente a limpeza não é o
+            suficiente para eliminar vírus e bactérias.</p>
+          <ol>
+            <li>Desinfecção</li>
+          </ol>
+          <p>É o processo que consiste no uso e na aplicação de desinfetante, produto que busca eliminar das
+            superfícies
+            99,999% de germes, bactérias e vírus, reduzindo-os a níveis não patogênicos.</p>
+          <ol>
+            <li>Esterilização</li>
+          </ol>
+          <p>Técnica que significa efetuar a eliminação total de germes, inclusive seus esporos, por meio de processos
+            físicos ou químicos bastante agressivos e restritos.</p>
+          <ol>
+            <li>Sanitização</li>
+          </ol>
+          <p>Sanitização é o processo de redução de bactérias e micro-organismos até um nível considerado seguro pelos
+            órgãos de saúde pública, garantindo a biossegurança do ambiente sanitizado.</p>
           <p>Por meio das medidas de higienização, evita-se a <b>contaminação cruzada</b>, que consiste na transferência
             de micro-organismos de uma pessoa, uma superfície ou um objeto para outra pessoa, resultando na transmissão
             de algum vírus ou bactéria. </p>
@@ -1213,7 +1228,23 @@
             podendo ser disponibilizados em solução específica para LCs gelatinosas ou RGPs.</p>
           <p>No mercado atual, conta-se quase que exclusivamente com soluções multiuso para fins de higienização de LC,
             obtendo praticidade e segurança em um só produto.</p>
-          <figure>
+          <figure class="only-print">
+            <img src="../conteudo/images/06/img_info01.png" class="center-block img-responsive borda" alt="">
+          </figure>
+          <div class="only-print">
+            <p>Acompanhe o passo a passo da assepsia correta das LCs com o produto multiuso: </p>
+            <ol>
+              <li>Lave bem as mãos antes de manusear as lentes, com sabonete neutro e sem hidratante. </li>
+              <li>Seque bem as mãos com uma toalha sem fiapos ou uma toalha de papel.</li>
+              <li>Coloque a lente na palma da mão e aplique algumas gotas da solução multiuso, friccionando
+                delicadamente com o dedo indicador da outra mão em movimentos circulares. Neste passo, tome cuidado para
+                não rasgar as lentes com as unhas.</li>
+              <li>Enxágue bem a lente com a solução multiuso.</li>
+              <li>Deixe as lentes imersas na solução multiuso, acondicionadas no estojo próprio para armazenagem das
+                LCs.</li>
+            </ol>
+          </div>
+          <figure class="no-print">
             <img src="../conteudo/images/06/info01.png" class="center-block img-responsive print borda"
               alt="Figura mostra mãos do profissional realizando assepsia de uma LC gelatinosa colorida e abaixo um estojo branco de acondicionamento para LC.">
             <figcaption>Assepsia de LC com produto multiuso<br>
@@ -1241,13 +1272,29 @@
           <p>Esta é uma solução voltada à desinfecção das LCs RGPs e que é utilizada na experimentação de caixas de
             provas. </p>
           <figure>
-            <img src="../conteudo/images/06/info02.png" class="center-block img-responsive print borda"
+            <img src="../conteudo/images/06/img_info02.png" class="center-block img-responsive print borda only-print"
+              alt="">
+          </figure>
+          <div class="only-print">
+            <p>Acompanhe o passo a passo do processo de desinfecção: </p>
+            <ol>
+              <li>Coloque as LCs no suporte destinado para seu encaixe. </li>
+              <li>Com cuidado, preencha o reservatório do estojo com a solução de peróxido de hidrogênio 3% até a linha
+                indicada (meio estojo). </li>
+              <li>Feche a tampa do estojo e deixe agir por no mínimo seis horas com o estojo na posição vertical. </li>
+              <li> Após o tempo de ação, esvazie a solução do estojo e enxágue abundantemente as LCs e o suporte com
+                solução fisiológica 0,9%. </li>
+              <li>Lave bem as mãos após o procedimento. </li>
+              <li>Armazene as LCs conforme orientação do fabricante. </li>
+            </ol>
+          </div>
+          <figure class="no-print">
+            <img src="../conteudo/images/06/info02.png" class="center-block img-responsive print borda no-print"
               alt="Figura mostra estojo para desinfecção de LC, em duas partes, sendo à direita o reservatório para solução e à esquerda a tampa com discos vazados para compartimentar as LCs a serem desinfetadas.">
             <figcaption>Estojo especial para desinfecção de LC RGP<br>
               Fonte: Senac EAD (2024)
             </figcaption>
           </figure>
-
           <ul>
             <li><b>Solução salina 0,9%</b></li>
           </ul>
@@ -1346,7 +1393,7 @@
             ambiente. </p>
         </div>
         <div class="btn-final no-print">
-          <a href="#topo"><button class="voltar">Voltar</button></a>
+          <a href="#topoini"><button class="voltar">Voltar</button></a>
         </div>
       </div>
     </section>
