--- a/conteudo/01_historico_e_evolucao_das_lentes.html
+++ b/conteudo/01_historico_e_evolucao_das_lentes.html
@@ -716,9 +716,9 @@
                 </p>
               </div>
             </div>
-            <div class="btn-final no-print">
+            <!-- <div class="btn-final no-print">
               <a href="#topo"><button class="voltar">Voltar</button></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
