--- a/conteudo/03_processo_de_fabricacao_das_lentes.html
+++ b/conteudo/03_processo_de_fabricacao_das_lentes.html
@@ -160,9 +160,9 @@
                       Fonte: YouTube (2021)
                     </figcaption>
                   </figure>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo1"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -263,9 +263,9 @@
                       Fonte: Senac EAD (2024)
                     </figcaption>
                   </figure>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo2"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -423,9 +423,9 @@
           dos processos. Esse profissional colabora com as funções de supervisionar os setores do laboratório, operar
           equipamentos e realizar a conferência do controle de qualidade das LCs, prezando sempre pela excelência na
           entrega do produto fabricado. </p>
-        <div class="btn-final no-print">
+        <!-- <div class="btn-final no-print">
           <a href="#topo"><button class="voltar">Voltar</button></a>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
