--- a/conteudo/04_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/04_adaptacao_de_lentes_de_contato.html
@@ -1462,9 +1462,9 @@
             pertinentes que auxiliem o profissional a tomar todas as medidas necessárias para proporcionar uma
             adaptação
             saudável, segura e bem-sucedida.</p>
-          <div class="btn-final no-print">
+          <!-- <div class="btn-final no-print">
             <a href="#topo"><button class="voltar">Voltar</button></a>
-          </div>
+          </div> -->
         </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
