--- a/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
+++ b/conteudo/05_tecnicas_de_adaptacao_de_lentes_de_contato.html
@@ -520,9 +520,9 @@
                         de
                         provas para
                         experimentação.</p>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo5"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -583,9 +583,9 @@
                           Fonte: Oftalsul (c2021a)
                         </figcaption>
                       </figure>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo6"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -626,9 +626,9 @@
                           Fonte: Oftalsul (c2021b)
                         </figcaption>
                       </figure>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo7"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -704,9 +704,9 @@
                         caixas de
                         provas
                         para experimentação.</p>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo8"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -751,9 +751,9 @@
                         candidato,
                         além de
                         diminuir o índice de oxigenação por ter dois materiais sobrepostos na superfície corneana.</p>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo9"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -1094,9 +1094,9 @@
                           Fonte: Oftalsul (c2021c)
                         </figcaption>
                       </figure>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo10"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -1151,9 +1151,9 @@
                       <p>As orientações para adaptação devem ser seguidas conforme o guia técnico de cada fabricante, de
                         acordo com a LC escolhida, e requer disponibilidade de caixas de provas para a realização do
                         teste.</p>
-                      <div class="btn-final no-print">
+                      <!-- <div class="btn-final no-print">
                         <a href="#topo11"><button class="voltar">Voltar</button></a>
-                      </div>
+                      </div> -->
                       <div class="modal-footer">
                         <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                       </div>
@@ -1374,9 +1374,9 @@
               preparado e inteirado sobre a variedade de modelos e desenhos disponibilizados pelos fabricantes em seus
               catálogos, seguindo fielmente suas orientações, além de ter uma boa seleção de caixas de provas e manter
               um bom relacionamento com especialistas. </p>
-            <div class="btn-final no-print">
+            <!-- <div class="btn-final no-print">
               <a href="#topo"><button class="voltar">Voltar</button></a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="modal modal-100 fade" id="modal-tecnica1" aria-hidden="false">
@@ -1406,9 +1406,9 @@
                     adaptação de LC justamente para estarem livres dos óculos durante o uso da lente, portanto
                     acabam não aprovando esse
                     recurso.</p>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo1"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1463,9 +1463,9 @@
                   <p>O tempo de adaptação com o sistema de monovisão costuma durar de 15 a 30 dias, com uso diário
                     de pelo menos quatro
                     horas.</p>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo2"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1545,9 +1545,9 @@
                       Fonte: Adaptado de Salvestrini (s. d.)
                     </figcaption>
                   </figure>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo3"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1587,9 +1587,9 @@
                   <p>Na técnica de monovisão modificada, também será avaliada a satisfação da visão do candidato de
                     longe e de perto e
                     poderão ser realizadas alterações da LC de teste.</p>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo4"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
