--- a/conteudo/06_descarte_de_residuos.html
+++ b/conteudo/06_descarte_de_residuos.html
@@ -270,9 +270,9 @@
                     especialista em LC deverá estar ciente de todas as regras de armazenagem das LCs e dos produtos
                     utilizados
                     em contatologia, garantindo assim a organização e a preservação do espaço onde atua. </p>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo1"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -726,9 +726,9 @@
                     garantir a proteção e a saúde tanto dos profissionais que atuam no ambiente quanto dos futuros
                     usuários de
                     LC. </p>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo2"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -862,9 +862,9 @@
                     ambiente. </p>
                   <p class="text-center no-print">ESPERA AUDIOVISUAL.</p>
                   <iframe src="" class="espera center-block img-responsive" frameborder="0"></iframe>
-                  <div class="btn-final no-print">
+                  <!-- <div class="btn-final no-print">
                     <a href="#topo3"><button class="voltar">Voltar</button></a>
-                  </div>
+                  </div> -->
                   <div class="modal-footer">
                     <button type="button" class="botao borda-primaria-03" data-dismiss="modal">Fechar</button>
                   </div>
@@ -1352,9 +1352,9 @@
             realizem um descarte consciente de suas lentes, colaborando, dessa forma, com a preservação do meio
             ambiente. </p>
         </div>
-        <div class="btn-final no-print">
+        <!-- <div class="btn-final no-print">
           <a href="#topoini"><button class="voltar">Voltar</button></a>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
