--- a/conteudo/07_referencias.html
+++ b/conteudo/07_referencias.html
@@ -275,9 +275,9 @@
           https://biblioteca.cofen.gov.br/videos/como-lavar-as-maos-coronavirus-1/. Acesso em: 4 abr. 2024.</p>
         <p>TUDO QUE você precisa saber sobre lentes de contato. <b>Acuvue</b>, c2024. Disponível em:
           https://www.acuvue.com.br/sustentabilidade/lidando-com-desperdicio. Acesso em: 4 abr. 2024.</p>
-        <div class="btn-final no-print">
+        <!-- <div class="btn-final no-print">
           <a href="#topo"><button class="voltar">Voltar</button></a>
-        </div>
+        </div> -->
       </div>
     </section>
     <!-- - - - - - - - - - - - - - - - não alterar abaixo- - - - - - - - - - - - -->
