--- a/conteudo/02_composicao_e_funcao_dos_produtos.html
+++ b/conteudo/02_composicao_e_funcao_dos_produtos.html
@@ -532,9 +532,9 @@
                 Fonte: Adaptado de CooperVision (c2021)
               </figcaption>
             </figure>
-            <div class="btn-final no-print">
+            <!-- <div class="btn-final no-print">
               <a href="#topo"><button class="voltar">Voltar</button></a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
